# droppa

./: .gitignore  Cargo.toml  build.bat  build.rs  build.sh  index.html  index.js  main.rs  qr.rs
.github/workflows/: rust.yml
back/: main.rs
front/: index-desktop.html  index-desktop.js  index-mobile.html  index-mobile.js
src/: index-desktop.html  index-desktop.js  index-mobile.html  index-mobile.js  index.html  index.js  index.js~  main.rs  qr.rs  stb_image_write.rs
